--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -15,7 +15,9 @@
     <Authorized>
         @if (user == null)
         {
-            <SpinnerLoader />
+            <div class="text-center justify-content-center align-items-center">
+                <SpinnerLoader />
+            </div>
         }
         else
         {
@@ -95,7 +97,7 @@
                             <div class="col-12">
                                 <div class="row mb-4">
                                     <div class="col-md-4 col-sm-12">
-                                        <LinkCard Link="my_doctor" CardTitle="My Doctor" CardText="@("Dr. " + Patient.AssignedDoctor.FirstName + " " + Patient.AssignedDoctor.LastName)">
+                                        <LinkCard Link="@("my_doctor/" + UUID)" CardTitle="My Doctor" CardText="@("Dr. " + Patient.AssignedDoctor.FirstName + " " + Patient.AssignedDoctor.LastName)">
                                             <span class="medical-icon-i-care-staff-area" style="color: rebeccapurple"></span>
                                         </LinkCard>
                                     </div>
@@ -105,7 +107,7 @@
                                         </LinkCard>
                                     </div>
                                     <div class="col-md-4 col-sm-12">
-                                        <LinkCard Link="my_doctor" CardTitle="My requests" CardText="Number of requests">
+                                        <LinkCard Link="@("my_requests/" + UUID)" CardTitle="My requests" CardText="Number of requests">
                                             <span class="oi oi-bell" style="color: rebeccapurple"></span>
                                         </LinkCard>
                                     </div>
@@ -168,40 +170,43 @@
     protected override async Task OnInitializedAsync()
     {
         var token = await localStorage.GetItemAsStringAsync("token");
-        var claims = JwtParser.ParseClaimsFromJwt(token);
-
-        user = claims.Single(c => c.Type.Equals("nameid")).Value.Split(" ")[0];
-        var exp = claims.Single(c => c.Type.Equals("exp")).Value;
-        var role = claims.Single(c => c.Type.Equals("role")).Value;
-        var jti = claims.Single(c => c.Type.Equals("jti")).Value;
-
-        UUID = jti;
-
-        if (role.Equals("ADMINISTRATOR"))
+        if(token != null)
         {
-            foreach (Claim claim in claims)
+            var claims = JwtParser.ParseClaimsFromJwt(token);
+
+            user = claims.Single(c => c.Type.Equals("nameid")).Value.Split(" ")[0];
+            var exp = claims.Single(c => c.Type.Equals("exp")).Value;
+            var role = claims.Single(c => c.Type.Equals("role")).Value;
+            var jti = claims.Single(c => c.Type.Equals("jti")).Value;
+
+            UUID = jti;
+
+            if (role.Equals("ADMINISTRATOR"))
             {
-                Console.WriteLine(claim);
+                foreach (Claim claim in claims)
+                {
+                    Console.WriteLine(claim);
+                }
+
+                HospitalStaff = await GetCount("api/users/doctors/count");
+                Patients = await GetCount("api/users/patients/count");
+                Administrators = await GetCount("api/users/administrators/count");
+                Medicines = await GetCount("api/medicine/count");
+                Companies = await GetCount("api/company/count");
+                Issuers = await GetCount("api/issuer/count");
             }
+            else if (role.Equals("DOCTOR"))
+            {
 
-            HospitalStaff = await GetCount("api/users/doctors/count");
-            Patients = await GetCount("api/users/patients/count");
-            Administrators = await GetCount("api/users/administrators/count");
-            Medicines = await GetCount("api/medicine/count");
-            Companies = await GetCount("api/company/count");
-            Issuers = await GetCount("api/issuer/count");
-        }
-        else if (role.Equals("DOCTOR"))
-        {
-
-        }
-        else if (role.Equals("PATIENT"))
-        {
-            Patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
-        }
-        else
-        {
-            Doctor = await Client.GetFromJsonAsync<DoctorDetailsDTO>("api/users/doctors/" + UUID);
+            }
+            else if (role.Equals("PATIENT"))
+            {
+                Patient = await Client.GetFromJsonAsync<PatientDetailsDTO>("api/users/patients/" + UUID);
+            }
+            else
+            {
+                Doctor = await Client.GetFromJsonAsync<DoctorDetailsDTO>("api/users/doctors/" + UUID);
+            }
         }
     }
 
