Center all content

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -74,17 +74,17 @@
                                 </NavLink>
                             </div>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="my_doctor">
+                                <NavLink class="nav-link" href="@("my_doctor/" + UUID)">
                                     <span class="medical-icon-i-care-staff-area pe-3" style="font-size: 1.25rem" aria-hidden="true"> </span> My Doctor
                                 </NavLink>
                             </div>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="my_schedule">
+                                <NavLink class="nav-link" href="@("/my_schedule/" + UUID)">
                                     <span class="oi oi-calendar" aria-hidden="true"></span> Appointments
                                 </NavLink>
                             </div>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="my_requests">
+                                <NavLink class="nav-link" href="@("/my_requests/" + UUID)">
                                     <span class="oi oi-bell" aria-hidden="true"></span> My Requests
                                 </NavLink>
                             </div>
