--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -22,7 +22,7 @@
             </Authorized>
         </AuthorizeView>
 
-        <article class="px-4">
+        <article class="d-flex px-4 align-items-center justify-content-center" style="height: calc(100% - 65px)">
             @Body
         </article>
     </main>
