--- a/Shared/SpinnerLoader.razor
+++ b/Shared/SpinnerLoader.razor
@@ -1,4 +1,4 @@
-﻿<div class="container" style="margin-top: 20rem">
+﻿<div class="container">
     <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status" />
     <h5 class="mt-1">Loading...</h5>
 </div>
