Update appointments link

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -79,7 +79,7 @@
                                 </NavLink>
                             </div>
                             <div class="nav-item px-3 col-12">
-                                <NavLink class="nav-link" href="@("/my_schedule/" + UUID)">
+                                <NavLink class="nav-link" href="@("/appointments/" + UUID)">
                                     <span class="oi oi-calendar" aria-hidden="true"></span> Appointments
                                 </NavLink>
                             </div>
